Se dividió la tarjeta en 2 secciones y se agrego la imagen

--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
   <title>Frontend Mentor | Profile card component</title>
 </head>
 <body>
+  <div>
+    <div id="top">
+    </div>
+    <div id="bottom">
+      <img src="images/image-victor.jpg" alt="Imagen de victor">
+    </div>
+  </div>
 </body>
 </html>
