Se termino la versión desktop y móvil

--- a/index.html
+++ b/index.html
@@ -2,17 +2,40 @@
 <html lang="en-US">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
   <link rel="stylesheet" href="scss/main.css">
   <title>Frontend Mentor | Profile card component</title>
 </head>
 <body>
-  <div>
+  <div id="main">
     <div id="top">
     </div>
     <div id="bottom">
       <img src="images/image-victor.jpg" alt="Imagen de victor">
+      <div id="personal-information">
+        <p id="name">Victor Crest</p>
+        <p id="age">26</p>
+      </div>
+      <div id="city">
+        <p>London</p>
+      </div>
+      <hr>
+      <div id="stats">
+        <div>
+          <b>80K</b>
+          <p>Followers</p>
+        </div>
+        <div>
+          <b>803K</b>
+          <p>Likes</p>
+        </div>
+        <div>
+          <b>1.4K</b>
+          <p>Photos</p>
+        </div>
+      </div>
     </div>
   </div>
 </body>
