Se agregaron los creditos

--- a/index.html
+++ b/index.html
@@ -38,5 +38,9 @@
       </div>
     </div>
   </div>
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="https://github.com/Devmmanuel" target="_blank">Devmmanuel</a>.
+  </div>
 </body>
 </html>
