--- a/index.html
+++ b/index.html
@@ -9,28 +9,38 @@
   <title>Frontend Mentor | Profile card component</title>
 </head>
 <body>
+  <!-- Full Card -->
   <div id="main">
+    <!-- Top Card -->
     <div id="top">
     </div>
+    <!-- Bottom Card -->
     <div id="bottom">
       <img src="images/image-victor.jpg" alt="Imagen de victor">
+      <!-- Personal Information -->
       <div id="personal-information">
         <p id="name">Victor Crest</p>
         <p id="age">26</p>
       </div>
+      <!-- City -->
       <div id="city">
         <p>London</p>
       </div>
+      <!-- Line -->
       <hr>
+      <!-- Stats -->
       <div id="stats">
+        <!-- Followers div -->
         <div>
           <b>80K</b>
           <p>Followers</p>
         </div>
+        <!-- Likes div -->
         <div>
           <b>803K</b>
           <p>Likes</p>
         </div>
+        <!-- Photos div -->
         <div>
           <b>1.4K</b>
           <p>Photos</p>
@@ -38,6 +48,7 @@
       </div>
     </div>
   </div>
+  <!-- Attibution div -->
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/Devmmanuel" target="_blank">Devmmanuel</a>.
