se cambiaron lo p por span para poder manejarlos como elementos en línea

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
       <img src="images/image-victor.jpg" alt="Imagen de victor">
       <!-- Personal Information -->
       <div id="personal-information">
-        <p id="name">Victor Crest</p>
-        <p id="age">26</p>
+        <span id="name">Victor Crest</span>
+        <span id="age">26</span>
       </div>
       <!-- City -->
       <div id="city">
-        <p>London</p>
+        London
       </div>
       <!-- Line -->
       <hr>
@@ -33,17 +33,17 @@
         <!-- Followers div -->
         <div>
           <b>80K</b>
-          <p>Followers</p>
+          <span>Followers</span>
         </div>
         <!-- Likes div -->
         <div>
           <b>803K</b>
-          <p>Likes</p>
+          <span>Likes</span>
         </div>
         <!-- Photos div -->
         <div>
           <b>1.4K</b>
-          <p>Photos</p>
+          <span>Photos</span>
         </div>
       </div>
     </div>
